angular client routing & service

--- a/packages/custom/todos/public/assets/css/todos.css
+++ b/packages/custom/todos/public/assets/css/todos.css
@@ -1,3 +1,11 @@
 .todos-example h1 {
   background-color: purple
 }
+
+.todos_item {
+    padding: 20px;
+}
+
+.todos_strike {
+  text-decoration: line-through;
+}
